--- a/blog-single.html
+++ b/blog-single.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
 <head>
-	<title>Boto | Photography HTML Template</title>
+	<title>Sustainability -Blog</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Boto Photo Studio HTML Template">
 	<meta name="keywords" content="photo, html">
@@ -41,7 +41,7 @@
 				</div>
 				<div class="col-sm-4 col-md-6 order-1  order-md-2 text-center">
 					<a href="./index.html" class="site-logo">
-						<img src="img/logo.png" alt="">
+						<img src="img/logo2.png" alt="">
 					</a>
 				</div>
 				<div class="col-sm-4 col-md-3 order-3 order-sm-3">
@@ -85,10 +85,10 @@
 		<article class="blog__article">
 			<div class="blog__container">
 				<div class="blog__header">
-					<div class="blog__cata">Photography</div>
-					<h2 class="blog__single__title">9 Reasons to Buy a 50mm Prime Lens & Skip the Kit Lens</h2>
+					<div class="blog__cata">Eco friendly</div>
+					<h2 class="blog__single__title">Eco & Social commitment</h2>
 					<div class="blog__metas">
-						<div class="blog__meta">By Colorlib </div>
+						<div class="blog__meta">Bellaflowers </div>
 						<div class="blog__meta">December 27, 2019</div>
 						<div class="blog__meta">No Comments</div>
 					</div>
@@ -99,7 +99,7 @@
 			<blockquote>
 				<p>Sed dignissim justo. Suspendisse fermentum erat. Duis consequat tortor. Mauris ut tellus a dolor. Suspendisse nec tellus. Donec quis lacus magna, sollicitudin id, turpis. Mauris in velit vel sollicitudin justo. Proin vitae massa nec cursus magna. Fusce blandit eu, ullamcorper in.</p>
 				<h4>Marvin Barber</h4>
-				<h5>PHOTOGRAPHY</h5>
+				<h5>EDITOR</h5>
 			</blockquote>
 			<div class="blog__container">
 				<h4>Assorted Textures FREE Stock Photos</h4>
@@ -114,28 +114,130 @@
 				<p>As am hastily invited settled at limited civilly fortune me. Really spring in extent an by. Judge but built gay party world. Of so am he remember although required. Bachelor unpacked be advanced at. Confined in declared marianne is vicinity. </p>
 				<p>Sussex result matter any end see. It speedily me addition weddings vicinity in pleasure. Happiness commanded an conveying breakfast in. Regard her say warmly elinor. Him these are visit front end for seven walls. Money eat scale now ask law learn. Side its they just any upon see last. He prepared no shutters perceive do greatest. Ye at unpleasant solicitude in companions interested. </p>
 			</div>
-			<div class="blog__container post__footer">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="post__tags">
-							<a href="#">Camera</a>
-							<a href="#">Photography</a>
-							<a href="#">Tips</a>
-						</div>
+
+	<!-- Footer -->
+	<footer class="page-footer font-small unique-color-dark">
+
+		<div style="background-color: #252525;">
+			<div class="container">
+
+				<!-- Grid row-->
+				<div class="row py-4 d-flex align-items-center">
+
+					<!-- Grid column -->
+					<div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+						<h6 class="mb-0 text-white">Get connected with us on social networks!</h6>
 					</div>
-					<div class="col-md-6">
-						<div class="post__share">
-							<span>Share:</span>
+					<!-- Grid column -->
+					<div class="lead col-md-6 text-white col-lg-7 text-center text-md-right">
+
+						<!-- Facebook -->
+						<a class="fb-ic">
 							<a href="#"><i class="fa fa-facebook"></i></a>
+						</a>
+						<!-- Twitter -->
+						<a class="tw-ic">
 							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-linkedin"></i></a>
+						</a>
+						<!--Instagram-->
+						<a class="ins-ic">
 							<a href="#"><i class="fa fa-instagram"></i></a>
-							<a href="#"><i class="fa fa-youtube-play"></i></a>
-						</div>
+						</a>
+
 					</div>
+					<!-- Grid column -->
+
 				</div>
+				<!-- Grid row-->
+
 			</div>
-			<div class="blog__container comment__area">
+		</div>
+
+		<!-- Footer Links -->
+		<div class="container text-center text-md-left mt-5">
+
+			<!-- Grid row -->
+			<div class="row mt-3">
+
+				<!-- Grid column -->
+				<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+					<!-- Content -->
+					<h6 class="text-uppercase font-weight-bold">BellaFlowers</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p>BellaFlowers is a wonderful company where people and flowers bloom.</p>
+
+				</div>
+				<!-- Grid column -->
+
+				<!-- Grid column -->
+				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold">Products</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><a href="#!">Red Roses</a></p>
+					<p><a href="#!">Pink Roses</a></p>
+					<p><a href="#!">Yellow Roses</a></p>
+					<p><a href="#!">Eco Roses</a></p>
+
+				</div>
+				<!-- Grid column -->
+
+				<!-- Grid column -->
+				<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold">Useful links</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><a href="#!">Your Account</a></p>
+					<p><a href="#!">Become an Affiliate</a></p>
+					<p><a href="#!">Shipping Rates</a></p>
+					<p><a href="#!">Help</a></p>
+
+				</div>
+				<!-- Grid column -->
+
+				<!-- Grid column -->
+				<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+					<!-- Links -->
+
+					<h6 class="text-uppercase font-weight-bold">Contact</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><i class="fa fa-location-arrow"></i> New York, NY 10012, US</p>
+					<p><i class="fa fa-inbox"></i> info@bella.com</p>
+					<p><i class="fa fa-phone-square"></i> + 01 234 567 88</p>
+					<p><i class="fa fa-phone-square"></i> + 01 234 567 88</p>
+
+				</div>
+				<!-- Grid column -->
+
+			</div>
+			<!-- Grid row -->
+
+		</div>
+		<!-- Footer Links -->
+
+		<!-- Copyright -->
+		<div class="footer__section">
+			<div class="container">
+				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+				<div class="footer__copyright__text">
+					<p>BellaFlowers &copy; <script>
+							document.write(new Date().getFullYear());
+						</script> All rights reserved | This template is made with <i class="fa fa-heart"
+							aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a></p>
+				</div>
+				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+			</div>
+		</div>
+		<!-- Copyright  -->
+
+	</footer>
+	<!-- Footer  End-->
+
+			<!-- <div class="blog__container comment__area">
 				<h2>Leave a Comment</h2>
 				<form class="comment__form">
 					<div class="row">
@@ -185,7 +287,7 @@
 			</div>
 		</article>
 	</div>
-	<!-- Blog Page end -->
+	Blog Page end -->
 
 	<!-- Footer Section -->
 	<footer class="footer__section">
@@ -199,16 +301,7 @@
 	</footer>
 	<!-- Footer Section end -->
 
-	<!-- Search Begin -->
-	<div class="search-model">
-		<div class="h-100 d-flex align-items-center justify-content-center">
-			<div class="search-close-switch">+</div>
-			<form class="search-model-form">
-				<input type="text" id="search-input" placeholder="Search here.....">
-			</form>
-		</div>
-	</div>
-	<!-- Search End -->
+
 
 	<!--====== Javascripts & Jquery ======-->
 	<script src="js/vendor/jquery-3.2.1.min.js"></script>
