--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
 				</div>
 				<div class="col-sm-4 col-md-6 order-1  order-md-2 text-center">
 					<a href="./index.html" class="site-logo">
-						<img src="img/logo.png" alt="">
+						<img src="img/logo2.png" alt="">
 					</a>
 				</div>
 
@@ -67,16 +67,16 @@
 						<div class="col-md-8 col-lg-7 col-xl-8">
 							<div class="blog__item set-bg" data-setbg="img/blog/1.jpg">
 								<div class="blog__content">
-									<div class="blog__date">DEC 18, 2019</div>
-									<h3><a href="./blog-single.html">9 Reasons to Buy a 50mm Prime Lens & Skip the Kit Lens</a></h3>
+									<div class="blog__date">Eco first</div>
+									<h3><a href="./blog-single.html">Our Ecological commitment</a></h3>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-lg-5 col-xl-4">
 							<div class="blog__item set-bg" data-setbg="img/blog/2.jpg">
 								<div class="blog__content">
-									<div class="blog__date">DEC 18, 2019</div>
-									<h4><a href="./blog-single.html">Assorted Textures FREE Stock Photos</a></h4>
+									<div class="blog__date">Projects</div>
+									<h4><a href="./blog-single.html">Sustainability</a></h4>
 								</div>
 							</div>
 						</div>
@@ -112,28 +112,126 @@
 	</section>
 	<!-- Blog Page end -->
 
-	<!-- Footer Section -->
-	<footer class="footer__section">
-		<div class="container">
-			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-			<div class="footer__copyright__text">
-				<p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
-			</div>
-			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-		</div>
-	</footer>
-	<!-- Footer Section end -->
+	<!-- Footer -->
+	<footer class="page-footer font-small unique-color-dark">
 
-	<!-- Search Begin -->
-	<div class="search-model">
-		<div class="h-100 d-flex align-items-center justify-content-center">
-			<div class="search-close-switch">+</div>
-			<form class="search-model-form">
-				<input type="text" id="search-input" placeholder="Search here.....">
-			</form>
+		<div style="background-color: #252525;">
+			<div class="container">
+
+				<!-- Grid row-->
+				<div class="row py-4 d-flex align-items-center">
+
+					<!-- Grid column -->
+					<div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+						<h6 class="mb-0 text-white">Get connected with us on social networks!</h6>
+					</div>
+					<!-- Grid column -->
+					<div class="lead col-md-6 text-white col-lg-7 text-center text-md-right">
+
+						<!-- Facebook -->
+						<a class="fb-ic">
+							<a href="#"><i class="fa fa-facebook"></i></a>
+						</a>
+						<!-- Twitter -->
+						<a class="tw-ic">
+							<a href="#"><i class="fa fa-twitter"></i></a>
+						</a>
+						<!--Instagram-->
+						<a class="ins-ic">
+							<a href="#"><i class="fa fa-instagram"></i></a>
+						</a>
+
+					</div>
+					<!-- Grid column -->
+
+				</div>
+				<!-- Grid row-->
+
+			</div>
 		</div>
-	</div>
-	<!-- Search End -->
+
+		<!-- Footer Links -->
+		<div class="container text-center text-md-left mt-5">
+
+			<!-- Grid row -->
+			<div class="row mt-3">
+
+				<!-- Grid column -->
+				<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+					<!-- Content -->
+					<h6 class="text-uppercase font-weight-bold">BellaFlowers</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p>BellaFlowers is a wonderful company where people and flowers bloom.</p>
+
+				</div>
+				<!-- Grid column -->
+
+				<!-- Grid column -->
+				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold">Products</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><a href="#!">Red Roses</a></p>
+					<p><a href="#!">Pink Roses</a></p>
+					<p><a href="#!">Yellow Roses</a></p>
+					<p><a href="#!">Eco Roses</a></p>
+
+				</div>
+				<!-- Grid column -->
+
+				<!-- Grid column -->
+				<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold">Useful links</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><a href="#!">Your Account</a></p>
+					<p><a href="#!">Become an Affiliate</a></p>
+					<p><a href="#!">Shipping Rates</a></p>
+					<p><a href="#!">Help</a></p>
+
+				</div>
+				<!-- Grid column -->
+
+				<!-- Grid column -->
+				<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold">Contact</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+					<p>	<i class="fas fa-envelope mr-3"></i> info@bella.com</p>
+					<p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+					<p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+
+				</div>
+				<!-- Grid column -->
+
+			</div>
+			<!-- Grid row -->
+
+		</div>
+		<!-- Footer Links -->
+
+		<!-- Copyright -->
+		<div class="footer__section">
+			<div class="container">
+				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+				<div class="footer__copyright__text">
+					<p>BellaFlowers &copy; <script>
+							document.write(new Date().getFullYear());
+						</script> All rights reserved | This template is made with <i class="fa fa-heart"
+							aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a></p>
+				</div>
+				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+			</div>
+		</div>
+		<!-- Copyright  -->
+
+	</footer>
+	<!-- Footer  End-->
 
 	<!--====== Javascripts & Jquery ======-->
 	<script src="js/vendor/jquery-3.2.1.min.js"></script>
