--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
 				</div>
 				<div class="col-sm-4 col-md-6 order-1  order-md-2 text-center">
 					<a href="./index.html" class="site-logo">
-						<img src="img/logo.png" alt="BellaLogo">
+						<img src="img/logo2.png" alt="BellaLogo">
 					</a>
 				</div>
 			</div>
@@ -56,9 +56,6 @@
 					<li><a href="./about.html">About</a></li>
 					<li><a href="./gallery.html" class="menu--active">Gallery</a></li>
 					<li><a href="./blog.html">Sustainability</a>
-						<ul class="sub__menu">
-							<li><a href="./blog-single.html">Sustainability</a></li>
-						</ul>
 					</li>
 					<li><a href="./contact.html">Contact</a></li>
 				</ul>
@@ -126,9 +123,70 @@
 						<img src="img/gallery/11.png" alt="flower10">
 					</a>
 				</div>
+
 				<div class="col-lg-3 col-md-4 col-sm-6">
 					<a class="gallery__item fresco" href="img/gallery/12.png" data-fresco-group="gallery">
-						<img src="img/gallery/12.png" alt="flower11">
+						<img src="img/gallery/12.png" alt="flower12">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/13.png" data-fresco-group="gallery">
+						<img src="img/gallery/13.png" alt="flower13">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/14.png" data-fresco-group="gallery">
+						<img src="img/gallery/14.png" alt="flower14">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/15.png" data-fresco-group="gallery">
+						<img src="img/gallery/15.png" alt="flower15">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/16.png" data-fresco-group="gallery">
+						<img src="img/gallery/16.png" alt="flower16">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/17.png" data-fresco-group="gallery">
+						<img src="img/gallery/17.png" alt="flower17">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/18.png" data-fresco-group="gallery">
+						<img src="img/gallery/18.png" alt="flower18">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/19.png" data-fresco-group="gallery">
+						<img src="img/gallery/19.png" alt="flower19">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/20.png" data-fresco-group="gallery">
+						<img src="img/gallery/22.png" alt="flower20">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/21.png" data-fresco-group="gallery">
+						<img src="img/gallery/21.png" alt="flower21">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/22.png" data-fresco-group="gallery">
+						<img src="img/gallery/22.png" alt="flower22">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/23.png" data-fresco-group="gallery">
+						<img src="img/gallery/23.png" alt="flower23">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="img/gallery/24.png" data-fresco-group="gallery">
+						<img src="img/gallery/24.png" alt="flower24">
 					</a>
 				</div>
 			</div>
@@ -136,28 +194,126 @@
 	</div>
 	<!-- About Page end -->
 
-	<!-- Footer Section -->
-	<footer class="footer__section">
-		<div class="container">
-			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-			<div class="footer__copyright__text">
-				<p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
-			</div>
-			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-		</div>
-	</footer>
-	<!-- Footer Section end -->
+	<!-- Footer -->
+	<footer class="page-footer font-small unique-color-dark">
 
-	<!-- Search Begin -->
-	<div class="search-model">
-		<div class="h-100 d-flex align-items-center justify-content-center">
-			<div class="search-close-switch">+</div>
-			<form class="search-model-form">
-				<input type="text" id="search-input" placeholder="Search here.....">
-			</form>
+		<div style="background-color: #252525;">
+			<div class="container">
+
+				<!-- Grid row-->
+				<div class="row py-4 d-flex align-items-center">
+
+					<!-- Grid column -->
+					<div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+						<h6 class="mb-0 text-white">Get connected with us on social networks!</h6>
+					</div>
+					<!-- Grid column -->
+					<div class="lead col-md-6 text-white col-lg-7 text-center text-md-right">
+
+						<!-- Facebook -->
+						<a class="fb-ic">
+							<a href="#"><i class="fa fa-facebook"></i></a>
+						</a>
+						<!-- Twitter -->
+						<a class="tw-ic">
+							<a href="#"><i class="fa fa-twitter"></i></a>
+						</a>
+						<!--Instagram-->
+						<a class="ins-ic">
+							<a href="#"><i class="fa fa-instagram"></i></a>
+						</a>
+
+					</div>
+					<!-- Grid column -->
+
+				</div>
+				<!-- Grid row-->
+
+			</div>
 		</div>
-	</div>
-	<!-- Search End -->
+
+		<!-- Footer Links -->
+		<div class="container text-center text-md-left mt-5">
+
+			<!-- Grid row -->
+			<div class="row mt-3">
+
+				<!-- Grid column -->
+				<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+					<!-- Content -->
+					<h6 class="text-uppercase font-weight-bold">BellaFlowers</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p>BellaFlowers is a wonderful company where people and flowers bloom.</p>
+
+				</div>
+				<!-- Grid column -->
+
+				<!-- Grid column -->
+				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold">Products</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><a href="#!">Red Roses</a></p>
+					<p><a href="#!">Pink Roses</a></p>
+					<p><a href="#!">Yellow Roses</a></p>
+					<p><a href="#!">Eco Roses</a></p>
+
+				</div>
+				<!-- Grid column -->
+
+				<!-- Grid column -->
+				<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold">Useful links</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><a href="#!">Your Account</a></p>
+					<p><a href="#!">Become an Affiliate</a></p>
+					<p><a href="#!">Shipping Rates</a></p>
+					<p><a href="#!">Help</a></p>
+
+				</div>
+				<!-- Grid column -->
+
+				<!-- Grid column -->
+				<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+					<!-- Links -->
+					<h6 class="text-uppercase font-weight-bold">Contact</h6>
+					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+					<p>	<i class="fas fa-envelope mr-3"></i> info@bella.com</p>
+					<p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+					<p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+
+				</div>
+				<!-- Grid column -->
+
+			</div>
+			<!-- Grid row -->
+
+		</div>
+		<!-- Footer Links -->
+
+		<!-- Copyright -->
+		<div class="footer__section">
+			<div class="container">
+				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+				<div class="footer__copyright__text">
+					<p>BellaFlowers &copy; <script>
+							document.write(new Date().getFullYear());
+						</script> All rights reserved | This template is made with <i class="fa fa-heart"
+							aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a></p>
+				</div>
+				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+			</div>
+		</div>
+		<!-- Copyright  -->
+
+	</footer>
+	<!-- Footer  End-->
 
 	<!--====== Javascripts & Jquery ======-->
 	<script src="js/vendor/jquery-3.2.1.min.js"></script>
