--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css"
+		integrity="sha256-/sdxenK1NDowSNuphgwjv8wSosSNZB0t5koXqd7XqOI=" crossorigin="anonymous" />
 	<link rel="stylesheet" href="css/slicknav.min.css" />
 	<link rel="stylesheet" href="css/fresco.css" />
 	<link rel="stylesheet" href="css/slick.css" />
@@ -79,7 +81,7 @@
 				<a class="fresco" href="img/hero-slider/1.jpg" data-fresco-group="projects">
 					<img src="img/hero-slider/1.jpg" alt="First slide">
 					<div class="blog__content text-white mb-5">
-						<h3>Welcome to BellaFlowers!</h3>
+						<h3> Welcome to BellaFlowers!</h3>
 					</div>
 				</a>
 			</div>
@@ -87,7 +89,7 @@
 				<a class="fresco" href="img/hero-slider/2.jpg" data-fresco-group="projects">
 					<img src="img/hero-slider/2.jpg" alt="">
 					<div class="blog__content text-white mb-5">
-						<h3>The best variety of roses</h3>
+						<h3> The best variety of roses</h3>
 					</div>
 				</a>
 			</div>
@@ -95,7 +97,7 @@
 				<a class="fresco" href="img/hero-slider/3.jpg" data-fresco-group="projects">
 					<img src="img/hero-slider/3.jpg" alt="">
 					<div class="blog__content text-white mb-5">
-						<h3>Commitment to quality and environment</h3>
+						<h3> Commitment to quality and environment</h3>
 					</div>
 				</a>
 			</div>
@@ -103,7 +105,7 @@
 				<a class="fresco" href="img/hero-slider/4.jpg" data-fresco-group="projects">
 					<img src="img/hero-slider/4.jpg" alt="">
 					<div class="blog__content text-white mb-5">
-						<h3>Certified farms</h3>
+						<h3> Certified farms</h3>
 					</div>
 				</a>
 			</div>
@@ -147,8 +149,12 @@
 		</div>
 	</section>
 	<!-- Hero Section end -->
+			<div class="container justify-content-center text-center">		
+				<a class="btn btn-md ml-0 text-white" href="gallery.html" role="button"
+					style="background-color: #ff0089;">Go to Gallery</a>
+		</div>
 
-	<div class="container my-5 py-5 z-depth-1">
+	<div class="container my-3 py-5 z-depth-1">
 
 
 		<!--Section: Content-->
@@ -158,19 +164,19 @@
 			<div class="row">
 
 				<!--Grid column-->
-				<div class="col-md-6 mb-4 mb-md-0">
+				<div class="col-md-6 mb-4 mb-md-0 block_container">
 
-					<h3 class="font-weight-bold">About BellaFlowers</h3>
+					<h3 class="font-weight-bold ">About BellaFlowers</h3>
 
 					<p class="text-muted my-3">We are a proud distributor of Circasia & Vuelven roses, with over 30
 						years’ experience in growing and exporting high quality roses directly from our farms located
 						near Bogotá, Colombia to North America, Europe, Asia and Australia. <br>
 
 						Our farms have been certified Rainforest Alliance since 2009 and Sedex (SMETA) audit, which
-						demonstrates our commitment to the environment and the well-being of our employees.</p>
+						supports our commitment to the environment and the well-being of our employees.</p>
 
-					<a class="btn btn-md ml-0" href="#" role="button" style="background-color: #df3a8c;">Start now<i
-							class="fa fa-gem ml-2"></i></a>
+					<a class="btn btn-md ml-0 text-white" href="about.html" role="button"
+						style="background-color: #ff0089;">See more</a>
 
 				</div>
 				<!--Grid column-->
@@ -260,7 +266,7 @@
 					<!-- Content -->
 					<h6 class="text-uppercase font-weight-bold">BellaFlowers</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p>BellaFlowers is a wonderful company where people can grow and flowers bloom.</p>
+					<p>BellaFlowers is a wonderful company where people and flowers bloom.</p>
 
 				</div>
 				<!-- Grid column -->
@@ -297,12 +303,13 @@
 				<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
 
 					<!-- Links -->
+
 					<h6 class="text-uppercase font-weight-bold">Contact</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-					<p>	<i class="fas fa-envelope mr-3"></i> info@bella.com</p>
-					<p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-					<p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+					<p><i class="fa fa-location-arrow"></i> New York, NY 10012, US</p>
+					<p><i class="fa fa-inbox"></i> info@bella.com</p>
+					<p><i class="fa fa-phone-square"></i> + 01 234 567 88</p>
+					<p><i class="fa fa-phone-square"></i> + 01 234 567 88</p>
 
 				</div>
 				<!-- Grid column -->
@@ -314,18 +321,18 @@
 		<!-- Footer Links -->
 
 		<!-- Copyright -->
-		<footer class="footer__section">
+		<div class="footer__section">
 			<div class="container">
 				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 				<div class="footer__copyright__text">
 					<p>BellaFlowers &copy; <script>
 							document.write(new Date().getFullYear());
 						</script> All rights reserved | This template is made with <i class="fa fa-heart"
-							aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlib</a></p>
+							aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a></p>
 				</div>
 				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			</div>
-		</footer>
+		</div>
 		<!-- Copyright  -->
 
 	</footer>
