--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 						supports our commitment to the environment and the well-being of our employees.</p>
 
 					<a class="btn btn-md ml-0 text-white" href="about.html" role="button"
-						style="background-color: #ff0089;">See more</a>
+						style="background-color: #ff0089;">Show more</a>
 
 				</div>
 				<!--Grid column-->
@@ -186,7 +186,7 @@
 
 					<!--Image-->
 					<div class="view overlay z-depth-1-half">
-						<img src="img/about1.jpg" class="img-fluid" alt="">
+						<img src="img/about1.jpg" class="img-fluid" alt="image about us">
 						<a href="#">
 							<div class="mask rgba-white-light"></div>
 						</a>
@@ -204,18 +204,6 @@
 
 
 	</div>
-
-	<!-- Search Begin -->
-	<div class="search-model">
-		<div class="h-100 d-flex align-items-center justify-content-center">
-			<div class="search-close-switch">+</div>
-			<form class="search-model-form">
-				<input type="text" id="search-input" placeholder="Search here.....">
-			</form>
-		</div>
-	</div>
-	<!-- Search End -->
-
 	<!-- Footer -->
 	<footer class="page-footer font-small unique-color-dark">
 
