--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@
 
 					<h6 class="text-uppercase font-weight-bold">Contact</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><i class="fa fa-location-arrow"></i> New York, NY 10012, US</p>
-					<p><i class="fa fa-inbox"></i> info@bella.com</p>
-					<p><i class="fa fa-phone-square"></i> + 01 234 567 88</p>
-					<p><i class="fa fa-phone-square"></i> + 01 234 567 88</p>
+					<p><i class="fa fa-location-arrow"></i> 1665 NW 102 Av. Suite 108. Doral -Fl 33172</p>
+					<p><i class="fa fa-inbox"></i> jgomez@bellaflowers.co </p>
+					<p><i class="fa fa-phone-square"></i> + 305-900-3793 </p>
+					<p><i class="fa fa-phone-square"></i> + 57 305-900-3793</p>
 
 				</div>
 				<!-- Grid column -->
