--- a/about.html
+++ b/about.html
@@ -50,7 +50,14 @@
 				<ul class="nav__menu">
 					<li><a href="./index.html">Home</a></li>
 					<li><a href="./about.html" class="menu--active">About</a></li>
-					<li><a href="./gallery.html">Gallery</a></li>
+					<li><a href="./gallery.html">Gallery</a>
+						<ul class="sub__menu">
+							<li><a href="./gallery1.html">Red Roses</a></li>
+							<li><a href="./gallery2.html">Yellow Roses</a></li>
+							<li><a href="./gallery3.html">Other Colors</a></li>
+							<li><a href="./gallery4.html">Tinted</a></li>
+						</ul>
+					</li>
 					<li><a href="./blog-single.html">Sustainability</a></li>
 					<li><a href="./contact.html">Contact</a></li>
 				</ul>
