--- a/blog-single.html
+++ b/blog-single.html
@@ -44,20 +44,22 @@
 						<img src="img/logo2.png" alt="">
 					</a>
 				</div>
-				<div class="col-sm-4 col-md-3 order-3 order-sm-3">
-					<div class="header__switches">
-						<a href="#" class="search-switch"><i class="fa fa-search"></i></a>
-						<a href="#" class="nav-switch"><i class="fa fa-bars"></i></a>
-						<a href="#"><i class="fa fa-shopping-cart"></i></a>
-					</div>
-				</div>
+
+				
 			</div>
 			<nav class="main__menu">
 				<ul class="nav__menu">
 					<li><a href="./index.html">Home</a></li>
 					<li><a href="./about.html">About</a></li>
-					<li><a href="./gallery.html">Gallery</a></li>
-					<li><a href="./blog-single.html">Sustainability</a></li>
+					<li><a href="./gallery.html">Gallery</a>
+						<ul class="sub__menu">
+							<li><a href="./gallery1.html">Red Roses</a></li>
+							<li><a href="./gallery2.html">Yellow Roses</a></li>
+							<li><a href="./gallery3.html">Other Colors</a></li>
+							<li><a href="./gallery4.html">Tinted</a></li>
+						</ul>
+					</li>
+					<li><a href="./blog-single.html" class="menu--active">Sustainability</a></li>
 					<li><a href="./contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -229,24 +231,8 @@
 				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			</div>
 		</div>
-		<!-- Copyright  -->
-
 	</footer>
 	
-	<!-- Footer Section -->
-	<footer class="footer__section">
-		<div class="container">
-			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-			<div class="footer__copyright__text">
-				<p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
-			</div>
-			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-		</div>
-	</footer>
-	<!-- Footer Section end -->
-
-
-
 	<!--====== Javascripts & Jquery ======-->
 	<script src="js/vendor/jquery-3.2.1.min.js"></script>
 	<script src="js/jquery.slicknav.min.js"></script>
