--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 					<li><a href="./about.html">About</a></li>
 					<li><a href="./gallery.html">Gallery</a>
 						<ul class="sub__menu">
-							<li><a href="./blog-single.html">Red Roses</a></li>
-							<li><a href="./blog-single.html">Yellow Roses</a></li>
-							<li><a href="./blog-single.html">Other Colors</a></li>
-							<li><a href="./blog-single.html">Tinted</a></li>
+							<li><a href="./gallery1.html">Red Roses</a></li>
+							<li><a href="./gallery2.html">Yellow Roses</a></li>
+							<li><a href="./gallery3.html">Other Colors</a></li>
+							<li><a href="./gallery4.html">Tinted</a></li>
 						</ul>
 					</li>
 					<li><a href="./blog-single.html">Sustainability</a></li>
@@ -94,7 +94,7 @@
 				<a class="fresco" href="img/hero-slider/2.jpg" data-fresco-group="projects">
 					<img src="img/hero-slider/2.jpg" alt="">
 					<div class="blog__content text-white mb-5">
-						<h3>The best varieties of roses</h3>
+						<h3>The best varieties <br> Proflora 2019 - Awarded 1st, 2nd & 3rd</h3>
 					</div>
 				</a>
 			</div>
@@ -123,7 +123,7 @@
 
 		</div>
 		<div class="hero-text-slider">
-			<div class="text-item">
+			<!-- <div class="text-item">
 				<h2>Nature</h2>
 				<p>Photography</p>
 			</div>
@@ -150,7 +150,7 @@
 			<div class="text-item">
 				<h2>Remarkable</h2>
 				<p>Photography</p>
-			</div>
+			</div> -->
 		</div>
 	</section>
 	<!-- Hero Section end -->
@@ -321,12 +321,15 @@
 		<!-- Copyright -->
 		<div class="footer__section">
 			<div class="container">
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+				<!--- Template is licensed under CC BY 3.0. -->
 				<div class="footer__copyright__text">
 					<p>Bella Flowers &copy; <script>
 							document.write(new Date().getFullYear());
-						</script> All rights reserved | This template is made with <i class="fa fa-heart"
-							aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a></p>
+						</script> All rights reserved</p>
+
+						<!-- <a>  | This template is made with <i class="fa fa-heart"
+							aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a> -->
+						
 				</div>
 				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			</div>
