--- a/gallery6.html
+++ b/gallery6.html
@@ -92,20 +92,20 @@
 				<div class="row">
 
 					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/mondial.png"
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/lavender/cool.jpg"
 							data-fresco-group="gallery">
-							<img src="img/gallery/white/mondial.png" alt="Mondial white">
+							<img src="img/gallery/lavender/cool.jpg" alt="Cool">
 							<div class="blog__content text-white mb-5">
-								<h3> • Mondial</h3>
+								<h3> • Cool</h3>
 							</div>
 						</a>
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/akito.png"
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/lavender/deep_purple.jpg"
 							data-fresco-group="gallery">
-							<img src="img/gallery/white/akito.png" alt="akito white">
+							<img src="img/gallery/lavender/deep_purple.jpg" alt="deep-purple">
 							<div class="blog__content text-white mb-5">
-								<h3> • Akito</h3>
+								<h3> • Deep Purple</h3>
 							</div>
 						</a>
 					</div>
