--- a/gallery1.html
+++ b/gallery1.html
@@ -130,7 +130,7 @@
 					</a>
 				</div>
 
-				<div class="col-lg-6 col-md-4 col-sm-6">
+				<div class="col-lg-3 col-md-4 col-sm-6">
 					<a class="gallery__item fresco img-hover-zoom" href="img/gallery/red/coral.png" data-fresco-group="gallery">
 						<img src="img/gallery/red/coral.png" alt="coral reef">
 						<div class="blog__content text-white mb-5">
@@ -139,17 +139,17 @@
 					</a>
 				</div>
 
-				<div class="col-lg-6 col-md-4 col-sm-6">
-					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/carpe_diem.jpg"
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/carpe_diem.png"
 						data-fresco-group="gallery">
-						<img src="img/gallery/yellow/carpe_diem.jpg" alt="carpe diem">
+						<img src="img/gallery/yellow/carpe_diem.png" alt="carpe diem">
 						<div class="blog__content text-white mb-5">
 							<h3> • Carpe Diem</h3>
 						</div>
 					</a>
 				</div>
 
-				<div class="col-lg-6 col-md-4 col-sm-6">
+				<div class="col-lg-3 col-md-4 col-sm-6">
 					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/tiffany.jpg"
 						data-fresco-group="gallery">
 						<img src="img/gallery/yellow/tiffany.jpg" alt="Tiffany">
@@ -159,7 +159,7 @@
 					</a>
 				</div>
 
-				<div class="col-lg-6 col-md-4 col-sm-6">
+				<div class="col-lg-3 col-md-4 col-sm-6">
 					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/shimmer.png"
 						data-fresco-group="gallery">
 						<img src="img/gallery/yellow/shimmer.png" alt="shimmer">
