--- a/gallery8.html
+++ b/gallery8.html
@@ -170,6 +170,58 @@
 							</div>
 						</a>
 					</div>	
+
+					<div class="col-lg-4 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/tinted/mardi_grass.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/tinted/mardi_grass.png" alt="Mardi Grass">
+							<div class="blog__content text-white mb-5">
+								<h3> • Mardi Grass</h3>
+							</div>
+						</a>
+					</div>	
+
+					<div class="col-lg-4 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/tinted/rainbow_pastel.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/tinted/rainbow_pastel.png" alt="Rainbow Pastel">
+							<div class="blog__content text-white mb-5">
+								<h3> • Rainbow Pastel</h3>
+							</div>
+						</a>
+					</div>	
+
+					<div class="col-lg-4 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/tinted/satin.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/tinted/satin.png" alt="Satin">
+							<div class="blog__content text-white mb-5">
+								<h3> • Satin</h3>
+							</div>
+						</a>
+					</div>	
+
+					<div class="col-lg-4 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/tinted/silver.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/tinted/silver.png" alt="Silver">
+							<div class="blog__content text-white mb-5">
+								<h3> • Silver</h3>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-lg-4 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/tinted/turqoise.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/tinted/turqoise.png" alt="Turqoise">
+							<div class="blog__content text-white mb-5">
+								<h3> • Turqoise</h3>
+							</div>
+						</a>
+					</div>
+
+
 					
 				</div>
 			</div>
